correction for click on mobile (google alert)

--- a/styles/work.scss
+++ b/styles/work.scss
@@ -44,13 +44,13 @@
 
     .work__title-icons {
       display: flex;
+      gap: 0.75rem;
 
       .work__icon {
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 0.5rem;
-        margin-right: 0.5rem;
         border-radius: 0.5rem;
         background-color: $clr-secondary;
 
